[tool.poetry]
name = "nawi-test"
version = "0.1.0"
description = ""
authors = ["Luis Maciel <lmaciel.amador@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
pytest = "^8.3.4"
bcrypt = "4.0.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
